# better-auth-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
compat-tests/: README.md
compat-tests/client-tests/: package.json  run-against-both.sh
compat-tests/rust-server/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: account_oauth_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: generate.rs  main.rs
crates/core/src/: email.rs  entity.rs  lib.rs  plugin.rs  schema.rs  session.rs  test_store.rs  types.rs  types_impls.rs  types_org.rs  types_plugin.rs
crates/derive/src/: auth_entity.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: lib.rs
crates/seaorm/: Cargo.toml
crates/seaorm-macros/: Cargo.toml
crates/seaorm-macros/src/: auth_entity.rs  lib.rs
crates/seaorm/src/: hooks.rs  lib.rs  (+1 more)
docs/: better-auth.json  package.json
examples/: README.md  axum_server.rs  postgres_usage.rs
scripts/: alignment-check.sh  generate_docs_openapi.rs
src/: lib.rs  prelude.rs
src/core/: auth.rs
src/handlers/: axum.rs
src/tests/: response_shape_tests.rs
tests/: architecture_guard_tests.rs  auth_entity_extra_fields_tests.rs  axum_integration_tests.rs  compat_admin_tests.rs  compatibility_tests.rs  database_hooks_tests.rs  integration_tests.rs  legacy_schema_integration_tests.rs  public_docs_consistency_tests.rs  rust_surface_auth_tests.rs
tests/compat/: helpers.rs
tests/snapshots/: snapshot_tests__snapshot_delete_user_response@delete_user.snap
(+92 files in other folders)
