[package]
name = "better-auth-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "CLI tools for better-auth-rs"
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "better-auth-rs"
path = "src/main.rs"

[dependencies]
better-auth-schema-registry = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
